# act-cli

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  context7.json  prek.toml  pyproject.toml
.cargo/: config.toml
.github/workflows/: build-docker.yml  build-npm.yml  build-pypi.yml  build-sbom.yml  build.yml  ci.yml  release.yml
act-build/: Cargo.toml  pyproject.toml
act-build/src/: main.rs  pack.rs  skill.rs  validate.rs  wasm.rs
act-build/src/manifest/: cargo.rs  mod.rs  packagejson.rs  pyproject.rs  validate.rs
act-cli/: Cargo.toml  build.rs  pyproject.toml
act-cli/src/: config.rs  format.rs  fs_matcher.rs  fs_policy.rs  http.rs  http_policy.rs  main.rs  mcp.rs  resolve.rs  rmcp_bridge.rs  runtime.rs
act-cli/src/bindings/: mod.rs
act-cli/src/runtime/: effective.rs  fs_matcher.rs  fs_policy.rs  http_client.rs  http_policy.rs  mod.rs  network.rs
act-cli/tests/: config_integration.rs  http_policy_e2e.rs  mcp_stdio_rmcp.rs
act-cli/tests/fixtures/: time.wasm
act-cli/wit/: world.wit
container/: act-build.containerfile  act.containerfile
docs/codedocs/: architecture.md  component-host-lifecycle.md  component-packaging.md  component-references.md  index.md  runtime-policies.md
docs/codedocs/api-reference/: build-pipeline.md  config.md  filesystem-policy.md  format.md  manifest-resolution.md  networking-policy.md  resolve.md  runtime-core.md  transports.md
docs/codedocs/guides/: configuring-policies-and-profiles.md  packing-and-validating-components.md  serving-components.md
docs/plans/: 2026-03-09-mcp-stdio-design.md  2026-03-09-mcp-stdio-plan.md  2026-03-09-reference-host-design.md  2026-03-09-reference-host.md  2026-03-09-sse-streaming-design.md  2026-03-09-sse-streaming-plan.md
docs/specs/: 2026-03-16-filesystem-capabilities.md
docs/superpowers/plans/: 2026-03-16-filesystem-capabilities.md  2026-03-25-cli-restructure.md  2026-03-25-component-ref.md
npm/: package.json
npm/@actcore/act/: package.json
npm/@actcore/act-build/: package.json
npm/@actcore/act-build-darwin-arm64/: package.json
npm/@actcore/act-build-darwin-x64/: package.json
npm/@actcore/act-build-linux-arm64/: package.json
npm/@actcore/act-build-linux-riscv64/: package.json
npm/@actcore/act-build-linux-x64/: package.json
npm/@actcore/act-build-win32-arm64/: package.json
npm/@actcore/act-build-win32-x64/: package.json
npm/@actcore/act-cli-darwin-arm64/: package.json
npm/@actcore/act-cli-darwin-x64/: package.json
npm/@actcore/act-cli-linux-arm64/: package.json
npm/@actcore/act-cli-linux-riscv64/: package.json
npm/@actcore/act-cli-linux-x64/: package.json
npm/@actcore/act-cli-win32-arm64/: package.json
npm/@actcore/act-cli-win32-x64/: package.json
npm/act-cli/: package.json
setup/: action.yml
skills/act/: SKILL.md
snap/: snapcraft.yaml
src/: config.rs  format.rs  http.rs  main.rs  mcp.rs  resolve.rs  runtime.rs
src/bindings/: mod.rs
tests/: config_integration.rs
wit/: world.wit
