[package]
name = "act-cli"
version = "0.2.0"
edition = "2024"
description = "CLI host for ACT (Agent Component Tools) WebAssembly components"
license = "MIT OR Apache-2.0"
repository = "https://github.com/actcore/act-cli"
homepage = "https://actcore.dev"
keywords = ["act", "wasm", "component-model", "mcp", "agent"]
categories = ["command-line-utilities", "wasm"]

readme = "README.md"
include = ["src/**", "wit/**", "README.md", "LICENSE-*", "CHANGELOG.md"]

[[bin]]
name = "act"
path = "src/main.rs"

[dependencies]
act-types = "0.2.4"
ciborium = "0.2"
anyhow = "1.0.102"
axum = "0.8.8"
base64 = "0.22.1"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50", features = ["full"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
toml = "1.0.7"
dirs = "6"
shellexpand = "3"
wasmparser = "0.245.1"
wasmtime = { version = "42", features = ["component-model", "component-model-async"] }
wasmtime-wasi = { version = "42", features = ["p3"] }
wasmtime-wasi-http = { version = "42", features = ["p3"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
