[workspace]
members = ["act-cli", "act-build"]
resolver = "3"

[workspace.package]
version = "0.3.5"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/actcore/act-cli"
homepage = "https://actcore.dev"
readme = "README.md"

[workspace.dependencies]
act-types = "0.3"
wasmparser = "0.246"

[patch.crates-io]
# Fix SIGILL on Android: wasmtime fiber uses PAuth instructions (paciasp/autiasp)
# unconditionally, but Android doesn't configure PAuth keys.
# See: https://github.com/bytecodealliance/wasmtime/issues/12778
wasmtime-internal-fiber = { git = "https://github.com/Heap-Hop/wasmtime.git", branch = "android_pauth" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
