[workspace]
members = ["act-cli", "act-build"]
resolver = "3"

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/actcore/act-cli"
homepage = "https://actcore.dev"
readme = "README.md"

[workspace.dependencies]
act-types = "0.4"
wasmparser = "0.247.0"

[profile.release]
lto = "thin"
