[package]
name = "act-build"
version.workspace = true
edition.workspace = true
description = "Build tool for ACT WASM components"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["act", "wasm", "component-model", "build"]
categories = ["command-line-utilities", "wasm", "development-tools::build-utils"]

readme.workspace = true

[[bin]]
name = "act-build"
path = "src/main.rs"

[dependencies]
act-types.workspace = true
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ciborium = "0.2"
json-patch = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmparser.workspace = true
wasm-encoder = "0.246"

[dev-dependencies]
tempfile = "3"
