[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "act-build"
dynamic = ["version"]
description = "Build tool for ACT WASM components"
readme = "../README.md"
license = "MIT OR Apache-2.0"
requires-python = ">=3.8"
keywords = ["act", "wasm", "component-model", "build"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://actcore.dev"
Repository = "https://github.com/actcore/act-cli"

[tool.maturin]
bindings = "bin"
